--- a/Contact.html
+++ b/Contact.html
@@ -101,7 +101,7 @@
             document.getElementById("applicationForm").addEventListener("submit", function(event) {
                 event.preventDefault(); 
                 var form = event.target;
-                if (confirm("?")) {
+                if (confirm("Are you sure you want to send this application")) {
                     form.submit(); 
 
                     window.location.href = "tank-page.html";
